# burn-rate

./: .dockerignore  .env.example  .gitignore  DESIGN.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  docker-entrypoint.sh
backend/: pyproject.toml
backend/budget/: admin.py  apps.py  auth_services.py  models.py  serializers.py  services.py  setup_services.py  urls.py  views.py
backend/budget/management/commands/: create_local_user.py  seed_demo_data.py
backend/budget/migrations/: 0001_initial.py  0002_remove_category_unique_category_by_scope_member_and_more.py  0003_alter_account_account_type.py  0004_transaction_merchant.py  0005_category_icon.py  0006_merchantconcept.py  0007_invitation.py  0008_invitation_names_optional.py  0009_installmentplan_first_payment_number.py  0010_installmentplan_merchant_recurringexpense_merchant.py  0011_installmentplan_round_up_monthly_payment.py  0012_alter_installmentplan_round_up_monthly_payment.py  0013_category_budget_behavior_and_more.py  0014_recurringexpense_auto_charge.py
backend/budget/tests/: test_api.py  test_budget_domain.py  test_seed_demo_data.py
backend/config/: settings.py  urls.py
docs/: README.md  agent-history.md  api.md  architecture.md  design-iteration.md  docker-hub-overview.md  domain.md  product.md
docs/decisions/: ADR-0001-monorepo-django-vue.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  categoryIcons.test.ts  categoryIcons.ts  main.ts  style.css
frontend/src/stores/: api.test.ts  api.ts  (+2 more)
scripts/: dev-services.sh
